--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npx webpack serve --mode development --open",
-    "build": "npx webpack --mode production"
+    "build": "npx webpack --mode production",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx src --fix"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,10 @@
     "url": "https://github.com/Denwa799/webpack-infinite-scroll/issues"
   },
   "homepage": "https://github.com/Denwa799/webpack-infinite-scroll#readme",
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 80
+  },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/node": "^7.20.7",
@@ -26,11 +31,21 @@
     "@babel/preset-typescript": "^7.21.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
+    "eslint": "^8.35.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
