--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npx webpack serve --mode development --open",
     "build": "npx webpack --mode production",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx src --fix"
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx src --fix",
+    "docs": "typedoc --entryPointStrategy expand ./src"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.35.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.6.0",
@@ -43,6 +45,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.8.4",
@@ -50,7 +53,8 @@
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.5",
+    "typedoc": "^0.23.26",
+    "typescript": "^4.7.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
